--- a/now.json
+++ b/now.json
@@ -5,5 +5,6 @@
   "env": {
     "CIRCLE_TOKEN": "@circle-token"
   },
-  "builds": [{"src": "index.js", "use": "@now/node"}]
+  "builds": [{"src": "index.js", "use": "@now/node"}],
+  "routes": [{"src": "/(.*)", "dest": "index.js"}]
 }
